# itr-bot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  render.yaml  vercel.json
.github/workflows/: deploy.yml
backend/: requirements.txt
backend/agents/: chat.py  guidance.py  intake.py  llm.py  orchestrator.py  reconcile.py
backend/agents/doc_intel/: extract.py
backend/app/: config.py  events.py  logging_setup.py  main.py  routes.py  store.py
backend/compute/: consolidate.py  engine.py  recompute.py  validators.py
backend/compute/constants/: fy2025_26.py
backend/debug/: e2e_live.py
backend/schemas/: compute.py  documents.py  events.py  profile.py
backend/tests/: test_engine.py
frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AgentPanel.tsx  ChatWidget.tsx  Checklist.tsx  ConfirmDetails.tsx  Guided.tsx  Questionnaire.tsx  Reconcile.tsx  Results.tsx  Stepper.tsx  Upload.tsx
frontend/app/lib/: api.ts  format.ts  session.tsx  types.ts
scripts/: generate_engine_report.py  generate_gt_report.py
